<resources>
    <string name="app_name">CalcFromArabicToRomanNumerals</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="mult">*</string>
    <string name="div">/</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="equally">=</string>
    <string name="dot">.</string>
    <string name="backspace">◄</string>
    <string name="convert">convert</string>
    <string name="clear">clear</string>
    <string name="emptyValue">Please input first value</string>
    <string name="emptyValues">Please input values</string>
    <string name="incorrectFormat">Incorrect number format</string>
    <string name="wrong">Please enter convertible value</string>
</resources>
